Solved horizontal scroll (f***ng 100vw)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,8 +28,8 @@ html {
       max-width: 80em;
       padding: 1.4em;
     }
-    #container-100vw {
-      width: 100vw;
+    #container-100 {
+      width: 100%;
       padding: 0em;
       section {
         &.body-area-2 {
@@ -71,7 +71,7 @@ html {
       }
     }
     #container,
-    #container-100vw {
+    #container-100 {
       box-sizing: border-box;
       margin: 0 auto;
       margin-bottom: 3em;
@@ -144,7 +144,7 @@ html {
           }
         }
       }
-      #container-100vw {
+      #container-100 {
         section {
           &.body-area-2 {
             > div {
@@ -205,7 +205,7 @@ html {
           }
         }
       }
-      #container-100vw {
+      #container-100 {
         section {
           display: flex;
           flex-direction: column;
